refactor: List<AccountModel>等をソート・フィルター機能付きコレクションクラスに置換
Account/KbnMst/Photo/PhotoTagの各Modelを保持するList<T>を、AccountModelList・
KbnMstModelList・PhotoModelList・PhotoTagModelListに置き換え、Service層に散在
していたソート・フィルターロジックをコレクションクラス側に集約した。

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>